# localdoc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCPACK_SPEC.md  EXAMPLES.md  FUNDING_ROADMAP.md  LICENSE  README.md  ROADMAP.md  TESTING_QUICKSTART.md  TESTING_SUMMARY.md  install.sh
docpacks/: godot-4.5-packaged.docpack
docpacks/godot-4.5.docpack/: manifest.json
examples/rust-std/: content.jsonl  manifest.json
src/: docpack.rs  godot_parser.rs  lib.rs  lister.rs  main.rs  mcp.rs  models.rs  packer.rs  query.rs  telemetry.rs  types.rs
src/commands/: diff.rs  explain.rs  extract.rs  generate.rs  info.rs  inspect.rs  list.rs  map.rs  mod.rs  nodes.rs  search.rs  stats.rs
tests/: README.md  integration_test.rs
tests/test_doc_sources/edge_cases/: Empty.xml  Malformed.xml  NestedMarkup.xml  NoInherits.xml  SpecialChars.xml  VeryLong.xml
