[package]
name = "localdoc_cli"
version = "0.1.0"
edition = "2021"
authors = ["xandwr"]
description = "A fast, offline-first CLI for querying and managing developer documentation using the Docpack format"
repository = "https://github.com/xandwr/doctown-monorepo"
homepage = "https://doctown.dev"
license = "Apache-2.0"
keywords = ["documentation", "cli", "offline", "search", "docpack"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "localdoc_cli"
path = "src/lib.rs"

[[bin]]
name = "localdoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
walkdir = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[features]
default = ["telemetry"]
telemetry = ["uuid", "reqwest"]

[dev-dependencies]
tempfile = "3.8"
