[package]
name = "localdoc"
version = "0.1.8"
edition = "2021"
description = "CLI tool for managing and packaging documentation for AI context"
license = "MIT"
repository = "https://github.com/yourusername/doctown-v3"
keywords = ["documentation", "cli", "ai", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "6.0.0"
anyhow = "1.0"
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
dirs = "6.0.0"
strsim = "0.11"
